--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^4.3.3",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
